GR - add lein profiles for building the app